--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "illuminate/support":"~5.0",
+        "illuminate/support":"~5.0|~6.0|~7.0|~8.0",
         "dapphp/securimage": "3.6.4"
     },
     "require-dev": {
