--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,12 @@
             "Yhbyun\\Securimage\\Test\\": "tests"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Yhbyun\\Securimage\\SecurimageServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "stable"
 }
