--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.5.0",
         "illuminate/support":"~5.0|~6.0|~7.0|~8.0",
-        "dapphp/securimage": "~4.0"
+        "dapphp/securimage": "3.6.8"
     },
     "require-dev": {
         "mockery/mockery": "~0.9.4",
